--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -617,12 +617,28 @@ video {
   display: grid;
 }
 
+.\!hidden {
+  display: none !important;
+}
+
+.hidden {
+  display: none;
+}
+
+.w-full {
+  width: 100%;
+}
+
 .min-w-\[240px\] {
   min-width: 240px;
 }
 
 .max-w-\[1000px\] {
   max-width: 1000px;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
@@ -633,12 +649,16 @@ video {
   justify-content: center;
 }
 
-.gap-10 {
-  gap: 2.5rem;
-}
-
 .gap-3 {
   gap: 0.75rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .border-b {
@@ -659,9 +679,18 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-5 {
@@ -711,17 +740,27 @@ video {
   text-decoration-line: none;
 }
 
+@media (min-width: 640px) {
+  .sm\:w-6\/12 {
+    width: 50%;
+  }
+}
+
 @media (min-width: 768px) {
-  .md\:w-2\/12 {
-    width: 16.666667%;
+  .md\:block {
+    display: block;
+  }
+
+  .md\:hidden {
+    display: none;
   }
 
   .md\:w-3\/12 {
     width: 25%;
   }
 
-  .md\:w-4\/12 {
-    width: 33.333333%;
+  .md\:gap-4 {
+    gap: 1rem;
   }
 }
 
@@ -729,5 +768,23 @@ video {
   .lg\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:\!block {
+    display: block !important;
+  }
+
+  .xl\:block {
+    display: block;
+  }
+
+  .xl\:hidden {
+    display: none;
+  }
+
+  .xl\:flex-nowrap {
+    flex-wrap: nowrap;
   }
 }
