--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -6,6 +6,10 @@
 .middle-container {
     padding: 0 1.25rem;
     position: relative;
+
+    @media (max-width:767px) {
+        padding: 0;
+    }
 }
 
 html,
