--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -3,8 +3,23 @@
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 1.25rem;
 
+    @media (max-width:767px) {
+        overflow: auto;
+        display: flex;
+        padding: 0 1rem;
+
+        .grid {
+            flex: 0 0 85%;
+            max-width: 85%;
+        }
+    }
+
     &[data-view="4"] {
         grid-template-columns: repeat(4, 1fr);
+
+        @media (max-width:1199px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
     }
 }
 
