--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -12,10 +12,27 @@ $header: '.header';
         display: flex;
         align-items: center;
         gap: 2rem;
+        margin-inline-start: auto;
+
+        @media (max-width:1199px) {
+            gap: 1rem;
+        }
     }
 
     &-search {
         flex: 1;
+
+        @media (max-width:1199px) {
+            order: 5;
+            flex: 0 0 100%;
+        }
+    }
+
+    &-language,
+    &-order {
+        @media (max-width:1199px) {
+            display: none;
+        }
     }
 
     &-main {
@@ -23,12 +40,51 @@ $header: '.header';
         align-items: center;
         gap: 2rem;
         padding: 1rem 2rem;
+
+        @media (max-width:1199px) {
+            flex-wrap: wrap;
+            padding: 1rem;
+            gap: 1rem;
+        }
     }
 
     &-bottom {
         background-color: #232f3e;
         color: #fff;
         padding: .5rem 2rem;
+
+        @media (max-width:1199px) {
+            padding: 0;
+            background-color: transparent;
+            color: currentColor;
+        }
+    }
+
+    &-location-mobile {
+        background-color: #232f3e;
+        color: #fff;
+        padding: 1rem;
+
+        .context-selector {
+            &__value {
+                font-weight: normal;
+            }
+        }
+    }
+
+    &-account {
+        .context-selector {
+            flex-direction: row-reverse;
+
+            &__media {
+                --size: 30px;
+
+                svg {
+                    width: 24px;
+                    height: 24px;
+                }
+            }
+        }
     }
 }
 
@@ -59,19 +115,39 @@ $context-selector: '.context-selector';
         }
     }
 
+    &__media {
+        --size: 40px;
+        width: var(--size);
+        height: var(--size);
+        max-width: var(--size);
+        flex: 0 0 var(--size);
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        svg {
+            width: 100%;
+            height: 100%;
+            display: block;
+            fill: currentColor;
+        }
+    }
+
     &__label {
         font-size: 12px !important;
         opacity: .75;
         font-weight: 300;
+        display: block;
     }
 
     &__value {
         font-weight: 600;
+        display: block;
     }
 
     span {
         line-height: 1.1;
-        display: block;
         font-size: .875rem;
     }
 }
@@ -88,6 +164,10 @@ $main-search: '.main-search';
     &__type {
         border-inline-end: 1px solid #ddd;
         padding-inline-end: 1rem;
+
+        @media (max-width:1199px) {
+            display: none;
+        }
     }
 
     &__field {
