--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,8 @@
 @import "components/hamburger";
 @import "components/collection-card";
 @import "components/layout";
+@import "components/icon";
+@import "components/misc";
 
 //Layout
 @import "layout/header";
@@ -21,3 +23,4 @@
 
 //Pages
 @import "pages/home";
+@import "pages/dashboard";
