--- a/src/scss/components/_icon.scss
+++ b/src/scss/components/_icon.scss
@@ -11,6 +11,8 @@
     svg {
         display: block;
         fill: currentColor;
+        width: 100%;
+        height: 100%;
     }
 
     &--sm {
