--- a/src/scss/components/_misc.scss
+++ b/src/scss/components/_misc.scss
@@ -45,3 +45,46 @@
      background-size: 20px;
      padding-inline-end: 2.25rem !important;
  }
+
+
+ .form-check-input {
+     width: 20px;
+     height: 20px;
+     margin: 0;
+     vertical-align: middle;
+     appearance: none;
+     border: 1px solid #ced4da;
+     border-radius: 0.25em;
+     background-color: #fff;
+     cursor: pointer;
+     position: relative;
+ }
+
+ .form-check-input:checked {
+     background-color: #0d6efd;
+     /* bootstrap primary */
+     border-color: #0d6efd;
+ }
+
+ .form-check-input:checked::after {
+     content: "";
+     position: absolute;
+     left: 6px;
+     top: 3px;
+     width: 5px;
+     height: 10px;
+     border: solid #fff;
+     border-width: 0 2px 2px 0;
+     transform: rotate(45deg);
+ }
+
+ .form-check-input:focus {
+     outline: none;
+     box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+ }
+
+ .form-check-label {
+     font-size: 0.875rem;
+     color: #212529;
+     cursor: pointer;
+ }
