listing page desktop view done

--- a/src/scss/components/_misc.scss
+++ b/src/scss/components/_misc.scss
@@ -88,3 +88,38 @@
      color: #212529;
      cursor: pointer;
  }
+
+ .line-clamp-2 {
+     display: -webkit-box;
+     -webkit-line-clamp: 2;
+     -webkit-box-orient: vertical;
+     overflow: hidden;
+ }
+
+ .text-amazon-link:hover {
+     color: #C7511F;
+     text-decoration: underline;
+ }
+
+ .custom-checkbox:checked {
+     background-color: #007185;
+     border-color: #007185;
+ }
+
+ /* Custom scrollbar for filters if needed */
+ ::-webkit-scrollbar {
+     width: 8px;
+ }
+
+ ::-webkit-scrollbar-track {
+     background: #f1f1f1;
+ }
+
+ ::-webkit-scrollbar-thumb {
+     background: #cdcdcd;
+     border-radius: 4px;
+ }
+
+ ::-webkit-scrollbar-thumb:hover {
+     background: #a8a8a8;
+ }
